gccida/g2/round_push
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/round_push/src/explow.c:1393:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v2.rtwint = ( __int64)size->fld[0]; 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/round_push/src/explow.c:1403:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/round_push/src/explow.c:1411:42: error: use of undeclared identifier 'machine_mode'
v8 = expand_divmod( 0, TRUNC_DIV_EXPR, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v6, v7, 0LL, 1); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/round_push/src/explow.c:1413:23: error: use of undeclared identifier 'machine_mode'
return expand_mult( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v8, v9, 0LL, 1); 
                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/round_push/src/obj/explow.o] Error 1
